--- a/.classpath
+++ b/.classpath
@@ -30,6 +30,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/bl0811/Documents/io.5.3.jar"/>
+	<classpathentry kind="lib" path="io.5.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
